--- a/MyTodo.html
+++ b/MyTodo.html
@@ -17,6 +17,8 @@
 		
 setTimeout(function(){document.getElementById("txtInput").value="";},100);
 
+setTimeout(function(){document.getElementById("date&time").value="";},100);
+
 
 		var getValue=document.getElementById("txtInput").value;
 		var myArray=[];
